make event repository unaware of event sourcing
